# ros_laser_filters_mod

./: .gitignore  robot_notes.txt
battery/: CMakeLists.txt  package.xml
battery/src/: batteryNode.py
detection/: CMakeLists.txt  package.xml
detection/msg/: brick.msg  brickarray.msg  detection.msg  detectionarray.msg  detectionimage.msg  singledetection.msg
detection/src/: bricks_tracker_node.py  bricks_tracker_node2.py  bricks_tracker_node_old.py  camera_coord.py  camera_test.py  camera_test0.py  camera_test1.py  convert_to_trt.py  coordinates_old.py  csi_camera.py  detect_bricksTF2-2cams.py  detection_node.py  detection_node2.py  detection_node_old.py  detection_node_old2.py  fps_tester.py  goal_query_node.py  image_translation_node.py  model_loader.py  thread_test_node.py
i2c/: CMakeLists.txt  package.xml
i2c/launch/: i2c.launch
i2c/srv/: i2cService.py  i2c_frame.srv  i2c_read_block.srv  i2c_read_byte.srv  i2c_read_word.srv  i2c_write_byte.srv  i2c_write_word.srv
imu/: CMakeLists.txt  package.xml
imu/src/: bmm_test.py  commands.py  definitions.py  i2c_test_ina.py  imu.py  imu_node.py  imu_test.py  registers.py
laser_filters/: laser_filters_plugins.xml
laser_filters/include/laser_filters/: angular_bounds_filter_neg.h
laser_filters/src/: laser_scan_filters.cpp
laser_filters/test/: test_speckle_filter
motorctrl/: CMakeLists.txt  package.xml
motorctrl/msg/: motorctrl_writeentry.msg
motorctrl/src/: measure_node.py  odom_node.py  odom_node_old.py  odometry_data.py  plot.py
motorctrl/srv/: motorCtrlService.py  motorctrl_grippercommand.srv  motorctrl_readpos.srv  motorctrl_readspeed.srv  motorctrl_writepos.srv  motorctrl_writespeed.srv
speedctrl/: CMakeLists.txt  package.xml
speedctrl/launch/: apartment-modified.pgm  apartment-modified.yaml  apartment.pgm  apartment.yaml  base_local_planner_params.yaml  base_local_planner_params_DWA.yaml  base_local_planner_params_TrajRollout.yaml  battery_watch.launch  costmap_common_params.yaml  global_costmap_params.yaml  imu.launch  jetson_env_loader.sh  laser_filter.yaml  local_costmap_params.yaml  map_in_rviz.launch  move_base.launch  opensource_tracking_main.launch  opensource_tracking_robot.launch  robot_remote.launch  robot_with_teleop.launch  robot_with_teleop_from_map.launch  robot_with_teleop_from_map_pi4.launch  robot_with_teleop_savedmap.launch  rviz_config.rviz  rviz_config_battery.rviz
speedctrl/msg/: speedlimit.msg
speedctrl/src/: pose_to_odom_node.py  speedCtrlNode.py  speed_converter.py
teleop_twist_keyboard/: teleop_twist_keyboard.py
